--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <a-scene>
-    <a-sky src="e16ai outside.JPG" rotation="0 100 -15" position="0 0 0"></a-sky>
+    <a-sky src="https://github.com/e16ai/webgl/blob/main/e16ai%20outside.JPG" rotation="0 100 -15" position="0 0 0"></a-sky>
     <a-sound src="Morning.mp3" autoplay="true" loop="true" volume="1" position="0 2 5">
     </a-sound>
     <!-- Asset management -->
