--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- Asset management -->
     <a-assets>
       <a-asset-item id="leftController" src="animated controller.glb"></a-asset-item>
-      <a-asset-item id="rightController" src="SenseXR controller.glb"></a-asset-item>
+      <a-asset-item id="rightController" src=""></a-asset-item>
       <a-asset-item id="carModel" src="cybertruck.glb"></a-asset-item>
     </a-assets>
 
